﻿[B]1.0.7[/B]
- Login változás követése
[B]1.0.6[/B]
- Kategórián belüli csoportosítás
[B]1.0.5[/B]
- Keresés megvalósítása
- Leia BugFix
[B]1.0.4[/B]
- Forrás változás követése (bejelentkezés)
[B]1.0.3[/B]
- Cím kinyerésének módosítása
[B]1.0.2[/B]
- Leia BugFix
[B]1.0.1[/B]
- BugFix
[B]1.0.0[/B]
- RTL Most átnevezve RTL+-ra